--- a/front-end-demos/pages/company-index/css/main.css
+++ b/front-end-demos/pages/company-index/css/main.css
@@ -16,7 +16,7 @@ body {
 
 .container {
   padding-right: 15px;
-  padding-left: 15px;
+  /* padding-left: 15px; */
   margin-right: auto;
   margin-left: auto;
 }
@@ -43,6 +43,7 @@ body {
   float: left;
   color: #fdcf48;
   font-size: 2.5em;
+  margin-left: 4%;
 }
 
 .navbar-collapse:after {
@@ -67,13 +68,16 @@ body {
 }
 
 header {
-  background-image: url('http://oxzza6wqb.bkt.clouddn.com/jirengu/task15/header-bg.jpg');
-  background-repeat: none;
+  /* background-image: url('http://oxzza6wqb.bkt.clouddn.com/jirengu/task15/header-bg.jpg'); */
+  /* background-repeat: none; */
   background-attachment: scroll;
   background-size: cover;
   background-position: center center;
   color: #fff;
   text-align: center;
+  position: absolute;
+  width: 100%;
+  /* background-color:rgba(0,0,0,0.2); */
 }
 
 header .intro {
@@ -137,7 +141,7 @@ section {
 }
 
 .services {
-  background-color: #fff;
+  background-color: #f7f7f7;
 }
 
 .services-head,
@@ -559,4 +563,118 @@ footer .container {
 
 .social-media span:hover {
   background-color: #fcce55;
+}
+
+.backToTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #555;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+.carousels {
+  width: 100%;
+  height: 1248px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.carousels>ul {
+  list-style: none;
+  width: 400%;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+}
+
+.carousels>ul::after{
+  content: '';
+  clear: both;
+  display: block;
+}
+
+.carousels .imgs>li {
+  float: left;
+}
+
+.carousels .imgs>li>img {
+  width: 100%;
+  height: 100%;
+}
+.carousels .arrow {
+  position: absolute;
+  top: 50%;
+  font-size: 30px;
+  text-decoration: none;
+  color: #fff;
+  margin-top: -30px;
+  border: 2px solid #fff;
+  width: 40px;
+  height: 40px;
+  line-height: 35px;
+  text-align: center;
+  border-radius: 25px;
+  z-index: 1;
+}
+.carousels .arrow:hover {
+  opacity: 0.6;
+}
+.carousels .prev {
+  left: 10px;
+}
+.carousels .next {
+  right: 10px;
+}
+.load-more-imgs {
+  background-color: #fff;
+}
+
+.waterfall {
+  text-align: center;
+}
+
+.waterfall .contents {
+  margin-bottom: 50px;
+  position: relative;
+  width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  list-style: none;
+}
+
+.waterfall .contents li{
+  position: absolute;
+  width: 200px;
+  margin: 5px;
+}
+
+.waterfall .contents .empty{
+  display: none;
+}
+
+.waterfall .contents li img{
+  width: 100%;
+}
+
+
+.loadMore{
+  margin-top: 10px;
+  color: #fff;
+  background-color: #fed136;
+  border-color: #fed136;
+  text-transform: uppercase;
+  font-weight: 700;
+  border-radius: 3px;
+  font-size: 18px;
+  padding: 20px 40px;
+  text-decoration: none;
 }
